<resources>
    <string name="app_name">My Application</string>
    <string name="search">search</string>
    <string name="show_the_word">show meaning</string>
    <string name="add_new_word">add new word</string>
    <string name="textview">text view</string>
    <string name="normal_view">normal view</string>
    <string name="word">word</string>
    <string name="meaning">meaning</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="home">home</string>
    <string name="review">review</string>
    <string name="extra">extra</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ali">ali</string>
    <string name="learned">learned</string>
    <string name="get_from_internet">get from Internet</string>
    <string name="change">change</string>
    <string name="edit">edit</string>
    <string name="speak">speak</string>
    <string name="add_word_or_list">add word or list</string>
    <string name="your_cards">your cards</string>
    <string name="add_category">add category</string>
    <string name="add_word">Add word</string>
    <string name="add_category_hint">Add category</string>
    <string name="my_categories">My categories</string>
    <string name="pick_randomly">Pick random</string>
    <string name="about">About</string>
    <string name="category">Category</string>
    <string name="menus">menus</string>
</resources>