<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:background="@color/fragment_color"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:hint="@string/word"
            android:autofillHints="" />

        <EditText
            android:id="@+id/meaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="30sp"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:hint="@string/meaning"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/cancel" />

            <ImageView
                android:id="@+id/get_from_internet"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/get_from_internet"
                android:layout_marginHorizontal="5dp"
                app:srcCompat="@drawable/baseline_question_mark_24" />

            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/add" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>