<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/word_in_cwl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/meaning_in_cwl"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/word_in_cwl"
        android:text="@string/ali" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_below="@id/meaning_in_cwl"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/learnBtn"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:text="@string/learned" />
</RelativeLayout>