<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    app:layoutDescription="@xml/activity_main_scene">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingTop="10dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <ImageButton
                android:id="@+id/imageButton2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:background="#FF0000"
                android:contentDescription="@string/add_new_word"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@android:drawable/ic_menu_add"
                tools:ignore="ImageContrastCheck" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                app:cardBackgroundColor="#03A9F4"
                app:cardCornerRadius="11dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/search_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="25dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/search"
                        android:inputType="text" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:contentDescription="@string/normal_view"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/line_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>


    </LinearLayout>


</RelativeLayout>