<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/speaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/add"
                android:minHeight="48dp"
                android:src="@drawable/volume_up_24"
                app:layout_constraintStart_toEndOf="@+id/pronucitoon"
                app:layout_constraintTop_toBottomOf="@+id/theWordItself" />

            <TextView
                android:id="@+id/theWordItself"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pronucitoon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="word"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/theWordItself"
                app:layout_constraintTop_toBottomOf="@+id/theWordItself" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_edit_24dp" />

            <ProgressBar
                android:id="@+id/learn_amount"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="@+id/theWordItself"
                app:layout_constraintTop_toBottomOf="@+id/speaker" />

            <ImageButton
                android:id="@+id/learn_the_word"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/learned"
                android:src="@drawable/sharp_article_24"
                app:layout_constraintStart_toEndOf="@+id/speaker"
                app:layout_constraintTop_toBottomOf="@+id/theWordItself" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>