<?xml version="1.0" encoding="utf-8"?>
<!-- thanks to https://github.com/2dust/v2rayNG project -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:id="@+id/info_container"
            android:clickable="true"
            android:focusable="true"
            android:nextFocusRight="@+id/layout_share"
            android:contentDescription="@string/add"
            android:background="@color/colorPrimary"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="@dimen/server_height"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_indicator"
                android:layout_width="6dp"
                android:contentDescription="@string/add"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:paddingStart="9dp">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:minLines="1"
                    android:textSize="30sp"
                    android:text="@string/add"
                    android:textColor="@color/text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="5dp">

                    <TextView
                        android:id="@+id/tv_subscription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:lines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/color_secondary"
                        android:textSize="10sp"
                        tools:text="" />

                    <TextView
                        android:id="@+id/tv_test_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/text_color"
                        android:textSize="12sp"
                        tools:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/layout_share"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/server_height"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:contentDescription="@string/cancel"
                        android:focusable="true"
                        android:gravity="center"
                        android:nextFocusLeft="@+id/info_container"
                        android:orientation="vertical"
                        android:padding="@dimen/layout_margin_spacing">



                        <ImageView
                            android:layout_width="wrap_content"
                            android:id="@+id/review_word"
                            android:layout_height="@dimen/png_height"
                            android:src="@drawable/eye_24" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/server_height"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:contentDescription="@string/ali"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/layout_margin_spacing">

                        <ImageView
                            android:id="@+id/edit_word"
                            android:layout_width="@dimen/png_height"
                            android:layout_height="@dimen/png_height"
                            android:src="@drawable/volume_up_24" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_remove"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/server_height"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:contentDescription="@string/add"
                        android:padding="@dimen/layout_margin_spacing">

                        <ImageView
                            android:id="@+id/delete_word"
                            android:layout_width="@dimen/png_height"
                            android:layout_height="@dimen/png_height"
                            android:src="@drawable/ic_delete_24dp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="vertical"
                    android:paddingEnd="5dp">

                    <TextView
                        android:id="@+id/tv_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/color_fab_orange"
                        android:textSize="11sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>